# tesi_ws

install/: local_setup.sh  setup.sh
install/create_dataset/lib/create_dataset/: image_capture_node  reloc_capture_node
install/create_dataset/share/create_dataset/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
log/: latest_build
src/create_dataset/: setup.py
src/create_dataset/create_dataset/: ResNet.ipynb  VGG16.ipynb  VGG19.ipynb  gist.ipynb  only_global.ipynb  orb.ipynb  processing_dataset.ipynb  processing_dataset_v2.ipynb  reloc_capture.py  sift.ipynb
src/create_dataset/map/: my_map_v2.pgm  my_map_v2.yaml
src/relocalization_pkg/: CMakeLists.txt  pub_initial_pose_command.txt  relocalization_node.py  setup.py
src/relocalization_pkg/launch/: relocalization.launch.py
src/relocalization_pkg/maps/: new_indoor_save.yaml  new_indoor_serial.data
src/relocalization_pkg/params/: nav2_params.yaml
src/relocalization_pkg/relocalization_pkg/: acquire_query_node.py  converge_to_pose_node.py  pose_estimation_node.py  show_poses_node.py  visual_place_recognition_node.py
src/relocalization_pkg/rviz/: relocalization.rviz
(+4120 files in other folders)
